==> pigrew/tinyusb/src/portable/st/stm32f0/dcd_stm32f0.c <==
#include "tusb_option.h"
#include "device/dcd.h"
#include "stm32f0xx.h"
#include "portable/st/stm32f0/dcd_stm32f0_pvt_st.h"
#include "uart_util.h"
#define MAX_EP_COUNT 8
#define BTABLE_BASE 0u
#define BTABLE_LENGTH (PMA_LENGTH)
#define MAX_PACKET_SIZE 64
#define XFER_CTL_BASE(_epnum, _dir) &xfer_status[_epnum][_dir]

void dcd_init (uint8_t rhport)
{
  /* Clocks should already be enabled */
  /* Use __HAL_RCC_USB_CLK_ENABLE(); to enable the clocks before calling this function */

  /* The RM mentions to use a special ordering of PDWN and FRES, but this isn't done in HAL.
   * Here, the RM is followed. */

  for(uint32_t i = 0; i<200; i++) { // should be a few us
    asm("NOP");
  }
	// Perform USB peripheral reset
  USB->CNTR = USB_CNTR_FRES | USB_CNTR_PDWN;
  for(uint32_t i = 0; i<200; i++) { // should be a few us
    asm("NOP");
  }
  USB->CNTR &= ~(USB_CNTR_PDWN);// Remove powerdown
  // Wait startup time, for F042 and F070, this is <= 1 us.
  for(uint32_t i = 0; i<200; i++) { // should be a few us
    asm("NOP");
  }
  USB->CNTR = 0; // Enable USB

  USB->BTABLE = BTABLE_BASE;

  USB->ISTR &= ~(USB_ISTR_ALL_EVENTS); // Clear pending interrupts

  // Clear all EPREG
  for(int i=0; i<8; i++) {
    EPREG(0) = 0u;
  }

  // Need to initialize the BTABLE for EP0 at this point (though setting up the EP0R is unneeded)
  for(int i=0;i<(PMA_LENGTH>>1); i++)
    ((uint16_t*)USB_PMAADDR)[BTABLE_BASE + i] = 0u;

  USB->CNTR |= USB_CNTR_RESETM | USB_CNTR_SOFM | USB_CNTR_CTRM | USB_CNTR_SUSPM | USB_CNTR_WKUPM;
  dcd_handle_bus_reset();
  // And finally enable pull-up, which may trigger the RESET IRQ if the host is connected.
  USB->BCDR |= USB_BCDR_DPPU;
}

bool dcd_edpt_open (uint8_t rhport, tusb_desc_endpoint_t const * p_endpoint_desc)
{

  uint8_t const epnum = tu_edpt_number(p_endpoint_desc->bEndpointAddress);
  uint8_t const dir   = tu_edpt_dir(p_endpoint_desc->bEndpointAddress);

  // Isochronous not supported (yet), and some other driver assumptions.
  TU_ASSERT(p_endpoint_desc->bDescriptorType != TUSB_XFER_ISOCHRONOUS);
  TU_ASSERT(p_endpoint_desc->wMaxPacketSize.size <= MAX_PACKET_SIZE);
  TU_ASSERT(epnum < MAX_EP_COUNT);
  TU_ASSERT((p_endpoint_desc->wMaxPacketSize.size %2) == 0);

 // __IO uint16_t * const epreg = &(EPREG(epnum));

  // Set type
  //*epreg &= ~(USB_EP_T_MASK | USB_EPKIND_MASK | USB_EPADDR_FIELD);
  switch(p_endpoint_desc->bDescriptorType) {
  case TUSB_XFER_CONTROL:
    PCD_SET_EPTYPE(USB, epnum, USB_EP_CONTROL); break;
  case TUSB_XFER_ISOCHRONOUS:
    PCD_SET_EPTYPE(USB, epnum, USB_EP_ISOCHRONOUS); break;
  case TUSB_XFER_BULK:
    PCD_SET_EPTYPE(USB, epnum, USB_EP_BULK); break;
  case TUSB_XFER_INTERRUPT:
    PCD_SET_EPTYPE(USB, epnum, USB_EP_INTERRUPT); break;
  }

  PCD_SET_EP_ADDRESS(USB, epnum, epnum);
  PCD_CLEAR_EP_KIND(USB,0); // Be normal, for now, instead of only accepting zero-byte packets

  if(dir == TUSB_DIR_IN) {
    *PCD_EP_TX_ADDRESS(USB, epnum) = ep_buf_ptr;
    PCD_SET_EP_RX_CNT(USB, epnum, p_endpoint_desc->wMaxPacketSize.size);
    PCD_CLEAR_TX_DTOG(USB, epnum);
    PCD_SET_EP_TX_STATUS(USB,epnum,USB_EP_TX_NAK);
  } else {
    *PCD_EP_RX_ADDRESS(USB, epnum) = ep_buf_ptr;
    PCD_SET_EP_RX_CNT(USB, epnum, p_endpoint_desc->wMaxPacketSize.size);
    PCD_CLEAR_RX_DTOG(USB, epnum);
    PCD_SET_EP_RX_STATUS(USB, epnum, USB_EP_RX_NAK);
  }

  ep_buf_ptr += p_endpoint_desc->wMaxPacketSize.size; // increment buffer pointer

  return true;
}

bool dcd_edpt_xfer (uint8_t rhport, uint8_t ep_addr, uint8_t * buffer, uint16_t total_bytes)
{
  (void) rhport;

  uint8_t const epnum = tu_edpt_number(ep_addr);
  uint8_t const dir   = tu_edpt_dir(ep_addr);

  xfer_ctl_t * xfer = XFER_CTL_BASE(epnum,dir);

  xfer->buffer = buffer;
  xfer->total_len = total_bytes;
  xfer->queued_len = 0;
  xfer->need_zero_len_tx = true;

  if ( dir == TUSB_DIR_OUT )
  {

    // A setup token can occur immediately after an OUT STATUS packet so make sure we have a valid
    // buffer for the control endpoint.
    if (epnum == 0 && buffer == NULL) {
        xfer->buffer = (uint8_t*)_setup_packet;
        PCD_SET_EP_KIND(USB,0); // Expect a zero-byte INPUT
    }
    PCD_SET_EP_RX_CNT(USB,epnum,total_bytes);
    PCD_SET_EP_RX_STATUS(USB, epnum, USB_EP_RX_VALID);
  }
  else // IN
  {
    dcd_transmit_packet(xfer,epnum);
  }
  return true;
}
